Testing first address

--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -35,9 +35,18 @@
         </style>
     </head>
     <body>
-    <ul>
-    <li>milk</li>
-    <li>eggs</li>
-    </ul>
+        <address> {
+            text-align: right;
+        }
+            <p>
+              <b>Dr. Eleanor Gaye</b>
+              Awesome Science faculty
+              University of Awesome
+              Bobtown, CA 99999,
+              USA
+              <b>Tel:</b> 123-456-7890
+              <b>Email:</b> no_reply@example.com  
+            </p>
+        </address>
     </body>                
 </html>
