--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -35,12 +35,10 @@
         </style>
     </head>
     <body>
-        <address> {
-            text-align: right;
-        }
+        <address> 
             <p>
               <b>Dr. Eleanor Gaye</b>
-              Awesome Science faculty
+              <p>Awesome Science faculty</p>
               University of Awesome
               Bobtown, CA 99999,
               USA
