--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -37,13 +37,14 @@
     <body>
         <address> 
             <p>
-              <b>Dr. Eleanor Gaye</b>
-              <p>Awesome Science faculty</p>
-              University of Awesome
-              Bobtown, CA 99999,
-              USA
-              <b>Tel:</b> 123-456-7890
-              <b>Email:</b> no_reply@example.com  
+                                        <b>Dr. Eleanor Gaye</b>
+                                        <p>Awesome Science faculty</p>
+                                        <p>University of Awesome</p>
+                                        <p>Bobtown, CA 99999,</p>
+                                        <p>USA</p>
+                                        <p><b>Tel:</b> 123-456-7890</p>
+                                        <p><b>Email:</b> no_reply@example.com</p>
+              </address>
             </p>
         </address>
     </body>                
