--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -40,7 +40,7 @@
     <body>
         <address> 
             <p>
-            <sender-column><strong>Dr. Eleanor Gaye</strong></sender-column>
+            <.sender-column><strong>Dr. Eleanor Gaye</strong></.sender-column>
                                         <p>Awesome Science faculty</p>
                                         <p>University of Awesome</p>
                                         <p>Bobtown, CA 99999,</p>
