--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -39,8 +39,8 @@
     </head>
     <body>
         <address> 
-            <p>
-            <.sender-column><strong>Dr. Eleanor Gaye</strong></.sender-column>
+            <sender-column><p>
+            <p><strong>Dr. Eleanor Gaye</strong></p>p>
                                         <p>Awesome Science faculty</p>
                                         <p>University of Awesome</p>
                                         <p>Bobtown, CA 99999,</p>
@@ -49,13 +49,49 @@
                                         <p><b>Email:</b> no_reply@example.com</p>
             
             </p>
-            <p>20 January 2016</p>
+            <p>20 January 2016</p></sender-column>
         </address>
         <address>
             <p><b>Miss Eileen Dover</b></p>
+            <p>4321 Cliff Top Edge</p>
             <p>Dover, CT9 XXX</p>
             <p>UK</p>
         </address>
-        <h1></h1>
-    </body>                
+        <h1><b>Re: Eileen Dover university application</b></h1>
+        <p>Dear Eilee,</p>
+        <p>Thank you for your recent application to join us at the University of Awesome's science faculty to study as part</p>
+        <p>of you <u>PhD.</u> next year. I will answer your questions one by one, in the following sections.</p>
+        <p><h2><b>Starting dates</b></h2></p>
+        <p>
+            We are happy to accomodate you starting your study with us at any time, however it would suit us better if you</p>
+        <p>could start at the beginning of a semester; the start dates for each one are as follows:</p> 
+        <p>
+            <ul>
+                <li>First semester: 9 September 2016</li>
+                <li>Second semester: 15 January 2017</li>
+                <li>Third semester: 2 May 2017</li>
+            </ul>
+        </p> 
+        <p>Please let me know if ths is ok, and if so which start date you would prefer.</p>
+        <p>You can find more information about important university dates on our website. </p>
+        <p><h3><b>Subjects of Study</b></h3></p>
+        <p>At the Awesome Science Faculty, we have a pretty open-minded research facility - as long as the subjects fall</p>
+        <p>somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just</p>
+        <p>the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued</p>
+        <p>by are as follows, in order of priority:</p>
+        <ol>
+            <li>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
+            <li>Measuring the effect on performance of funk bassplayers aat temperatures exceeding 30C (86F), when the audience size exponentially increases (effect of 3 x 10 increasing 3 x 10.)</li>
+            <li><u>HTML</u>and CSS constructs for representing musical scores.</li>
+        </ol>
+        <p>So please can you provice more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anyting else you think we'd need to know? Thanks.</p>
+
+        <p><h><b>Exotic dance moves</b></h></p>
+        <p>Yes, you are right! As part of my post-doctorate work, I <i>did</i>study exotic tribal dances. To answer your question, my favorite dances are as follows, with definitions:
+        </p>
+        <P>Polynesian chicken dance</P>
+        <p></p>
+        
+
+    </body>             
 </html>
