--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -89,16 +89,16 @@
         <p>Yes, you are right! As part of my post-doctorate work, I <i>did</i>study exotic tribal dances. To answer your question, my favorite dances are as follows, with definitions:
         </p>
         <P>Polynesian chicken dance</P>
-        <p>A little known but <i>very</i> influential dance dating back as far as 300 BC, a whole village would dance around in a circle like chickens, to encourage their livestock or be <blockquote>fruitful</blockquote>.</p>
+        <p>A little known but <i>very</i> influential dance dating back as far as 300 BC, a whole village would dance around in a circle like chickens, to encourage their livestock or be <q>fruitful</q>.</p>
         <p></p>
         <p>Icelandic brownian shuffle</p>
         <p>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptably tine, very rapic movements. One of my fellow students used to say that the thought this dance inspired modern styles such as Twerking.</p>
         <p>Arctic robot dance</p>
-        <p>An interesting example of historic misinformation, English explorers in the 1960's believed to have discovered a new dance style charcterised by <blockquote>robotic</blockquote>, stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</p>
+        <p>An interesting example of historic misinformation, English explorers in the 1960's believed to have discovered a new dance style charcterised by <q>robotic</q>, stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</p>
 
         <p>For more of my research, see my <u>exotic dance reserch</u>.</p>
         <P>Yours sincerely,</P>
         <p>Dr. Eleanor Gaye</p>
-        <P>University of Awesome motto. <blockquote>Be excellent to each other.</blockquote>--<i>The memoirs of Bill S Preston,Esq</i></P>
+        <P>University of Awesome motto. <q>Be excellent to each other.</q>--<i>The memoirs of Bill S Preston,Esq</i></P>
     </body>             
 </html>
