--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -52,19 +52,19 @@
             <p>20 January 2016</p></sender-column>
         </address>
         <address>
-            <p><b>Miss Eileen Dover</b></p>
+            <<element class="sender-column"><p><b>Miss Eileen Dover</b></p></element class="sender-column">
             <p>4321 Cliff Top Edge</p>
             <p>Dover, CT9 XXX</p>
             <p>UK</p>
         </address>
         <h1><b>Re: Eileen Dover university application</b></h1>
         <p>Dear Eilee,</p>
-        <p>Thank you for your recent application to join us at the University of Awesome's science faculty to study as part</p>
-        <p>of you <u>PhD.</u> next year. I will answer your questions one by one, in the following sections.</p>
+        <p>Thank you for your recent application to join us at the University of Awesome's science faculty to study as part
+        of you <u>PhD.</u> next year. I will answer your questions one by one, in the following sections.</p>
         <p><h2><b>Starting dates</b></h2></p>
         <p>
-            We are happy to accomodate you starting your study with us at any time, however it would suit us better if you</p>
-        <p>could start at the beginning of a semester; the start dates for each one are as follows:</p> 
+            We are happy to accomodate you starting your study with us at any time, however it would suit us better if you
+        could start at the beginning of a semester; the start dates for each one are as follows:</p> 
         <p>
             <ul>
                 <li>First semester: 9 September 2016</li>
@@ -75,9 +75,9 @@
         <p>Please let me know if ths is ok, and if so which start date you would prefer.</p>
         <p>You can find more information about important university dates on our website. </p>
         <p><h3><b>Subjects of Study</b></h3></p>
-        <p>At the Awesome Science Faculty, we have a pretty open-minded research facility - as long as the subjects fall</p>
-        <p>somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just</p>
-        <p>the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
+        <p>At the Awesome Science Faculty, we have a pretty open-minded research facility - as long as the subjects fall
+        somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just
+        the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
         <ol>
             <li>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
             <li>Measuring the effect on performance of funk bassplayers aat temperatures exceeding 30C (86F), when the audience size exponentially increases (effect of 3 x 10 increasing 3 x 10.)</li>
@@ -90,7 +90,7 @@
         </p>
         <P>Polynesian chicken dance</P>
         <p>A little known but <i>very</i> influential dance dating back as far as 300 BC, a whole village would dance around in a circle like chickens, to encourage their livestock or be <q>fruitful</q>.</p>
-        <p></p>
+        <p> </p>
         <p>Icelandic brownian shuffle</p>
         <p>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptably tine, very rapic movements. One of my fellow students used to say that the thought this dance inspired modern styles such as Twerking.</p>
         <p>Arctic robot dance</p>
