--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -52,7 +52,7 @@
             <p>20 January 2016</p></sender-column>
         </address>
         <address>
-            <<element class="sender-column"><p><b>Miss Eileen Dover</b></p></element class="sender-column">
+            <p><element class="sender-column"><b>Miss Eileen Dover</b></element class="sender-column"></p>
             <p>4321 Cliff Top Edge</p>
             <p>Dover, CT9 XXX</p>
             <p>UK</p>
