--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -40,19 +40,19 @@
     <body>
         <address> 
             <sender-column><p>
-            <p><strong>Dr. Eleanor Gaye</strong></p>
-                                        <p>Awesome Science faculty</p>
-                                        <p>University of Awesome</p>
-                                        <p>Bobtown, CA 99999,</p>
-                                        <p>USA</p>
-                                        <p><strong>Tel:</strong> 123-456-7890</p>
-                                        <p><b>Email:</b> no_reply@example.com</p>
+                <element class="sender-column"><p><strong>Dr. Eleanor Gaye</strong></p></element class="sender-column">
+                    <element class="sender-column"><p>Awesome Science faculty</p></element class="sender-column">
+                        <element class="sender-column"><p>University of Awesome</p></element class="sender-column">
+                            <element class="sender-column"><p>Bobtown, CA 99999,</p></element class="sender-column">
+                                <element class="sender-column"><p>USA</p></element class="sender-column">
+                                    <element class="sender-column"><p><strong>Tel:</strong> 123-456-7890</p></element class="sender-column">
+                                        <element class="sender-column"></element><p><b>Email:</b> no_reply@example.com</p></element class="sender-column">
             
             </p>
-            <p>20 January 2016</p></sender-column>
+            <element class="sender-column"></element><p>20 January 2016</p></sender-column></element class="sender-column">
         </address>
         <address>
-            <p><element class="sender-column"><b>Miss Eileen Dover</b></element class="sender-column"></p>
+            <p><b>Miss Eileen Dover</b></p>
             <p>4321 Cliff Top Edge</p>
             <p>Dover, CT9 XXX</p>
             <p>UK</p>
