--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -39,17 +39,16 @@
     </head>
     <body>
         <address> 
-            <sender-column><p>
                 <element class="sender-column"><p><strong>Dr. Eleanor Gaye</strong></p></element class="sender-column">
                     <element class="sender-column"><p>Awesome Science faculty</p></element class="sender-column">
                         <element class="sender-column"><p>University of Awesome</p></element class="sender-column">
                             <element class="sender-column"><p>Bobtown, CA 99999,</p></element class="sender-column">
                                 <element class="sender-column"><p>USA</p></element class="sender-column">
                                     <element class="sender-column"><p><strong>Tel:</strong> 123-456-7890</p></element class="sender-column">
-                                        <element class="sender-column"></element><p><b>Email:</b> no_reply@example.com</p></element class="sender-column">
+                                        <element class="sender-column"><p><b>Email:</b> no_reply@example.com</p></element class="sender-column">
             
             </p>
-            <element class="sender-column"></element><p>20 January 2016</p></sender-column></element class="sender-column">
+            <element class="sender-column"><p>20 January 2016</p></element class="sender-column">
         </address>
         <address>
             <p><b>Miss Eileen Dover</b></p>
