--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -78,8 +78,8 @@
         somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just
         the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
         <ol>
-            <li>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
-            <li>Measuring the effect on performance of funk bassplayers aat temperatures exceeding 30C (86F), when the audience size exponentially increases (effect of 3 x 10 increasing 3 x 10.)</li>
+            <li>Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
+            <li>Measuring the effect on performance of funk bassplayers aat temperatures exceeding 30<span>&#8451</span>C (86<span>&#8451</span>F), when the audience size exponentially increases (effect of 3 x 10^3 increasing 3 x 10^4.)</li>
             <li><u>HTML</u>and CSS constructs for representing musical scores.</li>
         </ol>
         <p>So please can you provice more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anyting else you think we'd need to know? Thanks.</p>
