--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -72,20 +72,20 @@
             </ul>
         </p> 
         <p>Please let me know if ths is ok, and if so which start date you would prefer.</p>
-        <p>You can find more information about important university dates on our website. </p>
+        <p>You can find more information about <a href="http://example.com/">important university dates</a> on our website. </p>
         <p><h3><b>Subjects of Study</b></h3></p>
         <p>At the Awesome Science Faculty, we have a pretty open-minded research facility - as long as the subjects fall
         somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just
         the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
         <ol>
             <li>Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
-            <li>Measuring the effect on performance of funk bassplayers aat temperatures exceeding 30<span>&#8451</span> (86<span>&#8457</span>), when the audience size exponentially increases (effect of 3 x 10<sup>3</sup> increasing 3 x 10 <sup>4</sup>.)</li>
+            <li>Measuring the effect on performance of funk bassplayers aat temperatures exceeding 30<span>&#8451</span> (86<span>&#8457</span>), when the audience size exponentially increases (effect of 3 x 10<sup>3</sup> increasing 3 x 10<sup>4</sup>.)</li>
             <li><u>HTML</u>and CSS constructs for representing musical scores.</li>
         </ol>
         <p>So please can you provice more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anyting else you think we'd need to know? Thanks.</p>
 
         <p><h><b>Exotic dance moves</b></h></p>
-        <p>Yes, you are right! As part of my post-doctorate work, I <i>did</i>study exotic tribal dances. To answer your question, my favorite dances are as follows, with definitions:
+        <p>Yes, you are right! As part of my post-doctorate work, I <i>did</i> study exotic tribal dances. To answer your question, my favorite dances are as follows, with definitions:
         </p>
         <P>Polynesian chicken dance</P>
         <p>A little known but <i>very</i> influential dance dating back as far as 300 BC, a whole village would dance around in a circle like chickens, to encourage their livestock or be <q>fruitful</q>.</p>
@@ -95,7 +95,7 @@
         <p>Arctic robot dance</p>
         <p>An interesting example of historic misinformation, English explorers in the 1960's believed to have discovered a new dance style charcterised by <q>robotic</q>, stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</p>
 
-        <p>For more of my research, see my <u>exotic dance reserch</u>.</p>
+        <p>For more of my research, see my <a href="http://example.com/">exotic dance reserch page</a>.</p>
         <P>Yours sincerely,</P>
         <p>Dr. Eleanor Gaye</p>
         <P>University of Awesome motto. <q>Be excellent to each other.</q>--<i>The memoirs of Bill S Preston,Esq</i></P>
