--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -59,7 +59,7 @@
         <h1><b>Re: Eileen Dover university application</b></h1>
         <p>Dear Eilee,</p>
         <p>Thank you for your recent application to join us at the University of Awesome's science faculty to study as part
-        of your <abbr title= "Hypertext Markup Language">PhD</abbr>ext year. I will answer your questions one by one, in the following sections.</p>
+        of your <abbr title= "Hypertext Markup Language">PhD</abbr> next year. I will answer your questions one by one, in the following sections.</p>
         <p><h2><b>Starting dates</b></h2></p>
         <p>
             We are happy to accomodate you starting your study with us at any time, however it would suit us better if you
@@ -87,14 +87,15 @@
         <p><h><b>Exotic dance moves</b></h></p>
         <p>Yes, you are right! As part of my post-doctorate work, I <i>did</i> study exotic tribal dances. To answer your question, my favorite dances are as follows, with definitions:
         </p>
-        <P>Polynesian chicken dance</P>
-        <p>A little known but <i>very</i> influential dance dating back as far as 300 BC, a whole village would dance around in a circle like chickens, to encourage their livestock or be <q>fruitful</q>.</p>
-        <p> </p>
-        <p>Icelandic brownian shuffle</p>
-        <p>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptably tine, very rapic movements. One of my fellow students used to say that the thought this dance inspired modern styles such as Twerking.</p>
-        <p>Arctic robot dance</p>
-        <p>An interesting example of historic misinformation, English explorers in the 1960's believed to have discovered a new dance style charcterised by <q>robotic</q>, stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</p>
-
+        <dl></dl>
+        <dt>Polynesian chicken dance</dt>
+        <dd>A little known but <i>very</i> influential dance dating back as far as 300 BC, a whole village would dance around in a circle like chickens, to encourage their livestock or be <q>fruitful</q>.
+        </dd>
+        <dt>Icelandic brownian shuffle</dt>
+        <dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptably tine, very rapic movements. One of my fellow students used to say that the thought this dance inspired modern styles such as Twerking.</dd>
+        <dt>Arctic robot dance</dt>
+        <dd>An interesting example of historic misinformation, English explorers in the 1960's believed to have discovered a new dance style charcterised by <q>robotic</q>, stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
+    </dl>
         <p>For more of my research, see my <a href="http://example.com/">exotic dance reserch page</a>.</p>
         <P>Yours sincerely,</P>
         <p>Dr. Eleanor Gaye</p>
