--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="John Durham">
+        <meta name="author" content="Anna Rodriguez">
         <title>CE Truffaut | Web Developer</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
@@ -21,7 +21,8 @@
         <!-- Wrap the unordered list of links in a nav element -->
         
         <!-- Add the image "patricia-frost-125-edited-medium.jpg" right before the opening <ul> tag of the nav. Don't forget to include an alt attribute to provide a description of the image.-->
-                <ul>
+            <img src= "/Users/annarodriguez/Documents/Github /allrodz93.github.io/images/images/patricia-frost-125-edited-medium.jpg">    
+            <ul>
                     <li><a href="letter-markup">Letter Markup</a></li>
                     <li><a href="planets-table">Planets Table</a></li>
                     <li><a href="wanted-poster">Wanted Poster</a></li>
