--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <figcaption>
                         <aside><a href="https://www.flickr.com/photos/eosmaiajohanna/16418452630/">Puddle</a> by 
                         <a href="https://www.flickr.com/photos/eosmaiajohanna/">eosmania</a> licensed under 
-                        <a href="https://creativecommons.org/licenses/by/2.0/legalcode">CC BY 2.0</a></aside></figcaption>
+                        <a href="https://creativecommons.org/licenses/by/2.0/legalcode">CC BY 2.0</a></figcaption>
                     </figure>
                 <!-- FIGURE 2 -->
         
@@ -114,7 +114,7 @@
                          <figcaption>  
                         <a href="https://www.flickr.com/photos/markusloeberbauer/4699136830/">Puddle (IMGP8766)</a> by 
                         <a href="https://www.flickr.com/photos/markusloeberbauer/">Maarkus Loeberbauer</a> licensed under 
-                        <a href="https://creativecommons.org/licenses/by-sa/2.0/legalcode">CC BY SA 2.0</a></figcaption>  
+                        <a href="https://creativecommons.org/licenses/by-sa/2.0/legalcode">CC BY SA 2.0</a></aside></figcaption>  
                     </figure> 
                    
                 </main>
