--- a/index.html
+++ b/index.html
@@ -42,15 +42,29 @@
                     <td><b>Notes</b></td>
                     <td><b>Image</b></td>
                 </tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
+                <tr>  
+                    <td><b>Mercury</b></td>
+                    <td>0.330</td>
+                    <td>4.879</td>
+                    <td>5427</td>
+                    <td>3.7</td>
+                    <td>4222.6</td>
+                    <td>57.9</td>
+                    <td>167</td>
+                    <td>0</td>
+                    <td>Closest to the Sun</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
+                    <tr></tr>
             </tbody>
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
             </table> 
