--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <tbody>
                 <tr>
                     <td></td>
-                    <td><b>Name</b></td>
+                    <border solid; <td><b>Name</b></td>
                     <td><b>Mass (10 <sup>24</sup>kg</b></td>
                     <td><b>Diameter (km)</b></td>
                     <td><b>Density (kg/m<sup>2</sup>)</b></td>
@@ -43,9 +43,10 @@
                     <td><b>Image</b></td>
                 </tr>
                 <tr>  
+                    <td></td>
                     <td><b>Mercury</b></td>
                     <td>0.330</td>
-                    <td>4.879</td>
+                    <td>4,879</td>
                     <td>5427</td>
                     <td>3.7</td>
                     <td>4222.6</td>
@@ -54,19 +55,120 @@
                     <td>0</td>
                     <td>Closest to the Sun</td>
                     <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><b>Venus</b></td>
+                    <td>4.87</td>
+                    <td>12,104</td>
+                    <td>5243</td>
+                    <td>8.9</td>
+                    <td>2802.0</td>
+                    <td>108.2</td>
+                    <td>464</td>
+                    <td>0</td>
+                    <td></td>
                     <td></td>
                 </tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
+                <tr>
+                    <td></td>
+                    <td><b>Earth</b></td>
+                    <td>5.97</td>
+                    <td>12,756</td>
+                    <td>5514</td>
+                    <td>9.8</td>
+                    <td>24.0</td>
+                    <td>149.6</td>
+                    <td>15</td>
+                    <td>1</td>
+                    <td>Our World</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><b>Mars</b></td>
+                    <td>0.642</td>
+                    <td>6,792</td>
+                    <td>3933</td>
+                    <td>3.7</td>
+                    <td>24.7</td>
+                    <td>227.9</td>
+                    <td>-65</td>
+                    <td>2</td>
+                    <td>The red planet</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><b>Jupiter</b></td>
+                    <td>1898</td>
+                    <td>142,984</td>
+                    <td>1326</td>
+                    <td>23.1</td>
+                    <td>9.9</td>
+                    <td>778.6</td>
+                    <td>-110</td>
+                    <td>67</td>
+                    <td>The largest planet</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><b>Saturn</b></td>
+                    <td>568</td>
+                    <td>120,536</td>
+                    <td>687</td>
+                    <td>9.0</td>
+                    <td>10.7</td>
+                    <td>1433.5</td>
+                    <td>-140</td>
+                    <td>62</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><b>Uranus</b></td>
+                    <td>86.8</td>
+                    <td>51,118</td>
+                    <td>1271</td>
+                    <td>8.7</td>
+                    <td>17.2</td>
+                    <td>2872.5</td>
+                    <td>-195</td>
+                    <td>27</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><b>Neptune</b></td>
+                    <td>102</td>
+                    <td>49,528</td>
+                    <td>1638</td>
+                    <td>11.0</td>
+                    <td>16.1</td>
+                    <td>4495.1</td>
+                    <td>-200</td>
+                    <td>14</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><b>Pluto</b></td>
+                    <td>0.0146</td>
+                    <td>2,370</td>
+                    <td>2095</td>
+                    <td>0.7</td>
+                    <td>153.3</td>
+                    <td>5906.4</td>
+                    <td>-225</td>
+                    <td>5</td>
+                    <td>Declassified as a planet in 2006, but the remains controversial</td>
+                    <td></td>
+                </tr>
             </tbody>
-                Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
             </table> 
         </main>
      </body>
