--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <tbody>
                 <tr>
                     <td></td>
-                    <border solid; <td><b>Name</b></td>
+                    <td><b>Name</b></td>
                     <td><b>Mass (10 <sup>24</sup>kg</b></td>
                     <td><b>Diameter (km)</b></td>
                     <td><b>Density (kg/m<sup>2</sup>)</b></td>
