--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <main>
             <table>
                 <caption>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</caption>
+                <thead>
+                     <tr>
+                         <th scope="col"><b>Name</b></th>
+                         <th scope="col"><b>Mass (10 <sup>24</sup>kg</b></th>
+                     </tr></thead>
                 <colgroup>
                 <col>
                 <col>
@@ -24,9 +29,6 @@
                 <col>
                 <col>
             </colgroup>
-            <thread>
-                <tr></tr>
-            </thread>
             <tbody>
                 <tr>
                     <td></td>
