--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 </thead>
             <tbody>
                 <tr>  
-                    <th rowspan="4" colspan="2" scope="rowgroup">Terrestrial planets</th>
+                    <th background-color: rgb(250,250,250);
+                } rowspan="4" colspan="2" scope="rowgroup">Terrestrial planets</th>
                     <th scope="row"> Mercury</th>
                     <td>0.330</td>
                     <td>4,879</td>
