--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
             <h1>Planets Data</h1>
         </header>
         <main>
-            <table>
+            <table border-collapse: collapse;
+            border: 2px solid rgb(200,200,200);
+            letter-spacing: 1px;
+            font-size: 0.75rem;
+              width:100%;
+              max-width:1920px>
                 <caption>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</caption>
                 <colgroup>
                     <col span="2">
