--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Anna Rodriguez">
         <link href="css/style.css" rel="stylesheet" type="text/css">
+
+        <style>
+            table {
+           border-collapse: collapse;
+           border: 2px solid rgb(200,200,200);
+           letter-spacing: 1px;
+           font-size: 0.75rem;
+            width:100%;
+           max-width:1920px;
+            }
+        </style>
+       
     </head>
     <body>
         <header>
             <h1>Planets Data</h1>
         </header>
         <main>
-            <table border-collapse: collapse;
-            border: 2px solid rgb(200,200,200);
-            letter-spacing: 1px;
-            font-size: 0.75rem;
-                width: 100%;
-                max-width: 1920px;>
+            <table>
                 <caption>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</caption>
                 <thead>
                      <tr>
