--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">
 
         <style>
+            html {
+            font-family: sans-serif;
+            font-size:16px;
+            }
+
+            header, 
+            main {
+    
+                margin:0 auto;
+                width:80%;
+            }
+
             table {
            border-collapse: collapse;
            border: 2px solid rgb(200,200,200);
