--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <thead>
                      <tr>
                          <td colspan="2"></td>
-                         <th scope="col"><b>Name</b></th>
+                         <th scope="col"><b>Name</b></th> 
                          <th scope="col"><b>Mass (10 <sup>24</sup>kg</b></th>
                          <th scope="col"><b>Diameter (km)</b></th>
                          <th scope="col"><b>Density (kg/m<sup>2</sup>)</b></th>
@@ -94,7 +94,7 @@
                 <tr>  
                     <th background-color: rgb(250,250,250);
                 } rowspan="4" colspan="2" scope="rowgroup">Terrestrial planets</th>
-                    <th scope="row"> Mercury</th>
+                    <th border: solid; scope="row"> Mercury</th>
                     <td>0.330</td>
                     <td>4,879</td>
                     <td>5427</td>
