--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <td>464</td>
                     <td>0</td>
                     <td></td>
-                    <td><img src= /allrodz93.github.io/Planets-table/planets-table/images/venus.jpg> </td>
+                    <td><img src= /Users/annarodriguez/Documents/Github/allrodz93.github.io/Planets-table/planets-table/images/venus.jpg> </td>
                 </tr>
                 <tr>
                     
