--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <td>15</td>
                     <td>1</td>
                     <td>Our World</td>
-                    <td><img src="/Users/annarodriguez/Documents/Github /allrodz93.github.io/Planets-table/planets-table/images/earth.png"></td>
+                    <td><img src="Planets-table/planets-table/images/earth.png"></td>
                 </tr>
                 <tr>
                     
