--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <thead>
                      <tr>
                          <td colspan="2"></td>
-                         <th border; solid; scope="col"><b>Name</b></th> 
-                         <th scope="col"><b>Mass (10 <sup>24</sup>kg</b></th>
+                         <th scope="col"> <b>Name</b></th> 
+                         <th scope="col"><b>Mass(10<sup>24</sup>kg</b></th>
                          <th scope="col"><b>Diameter (km)</b></th>
                          <th scope="col"><b>Density (kg/m<sup>2</sup>)</b></th>
                          <th scope="col"><b>Gravity (m/s<sup>2</sup>)</b></th>
