--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
             th {
             background-color: rgb(235,235,235);
+            border-collapse: collapse;
             border: solid
+
             }
 
             td {
