--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             th {
             background-color: rgb(235,235,235);
             border-collapse: collapse;
+            border-style: solid;
             border: solid
 
             }
@@ -96,7 +97,7 @@
             <tbody>
                 <tr>  
                     <td background-color: rgb(250,250,250);
-                } rowspan="4" colspan="2" scope="rowgroup">Terrestrial planets</td>
+                } rowspan="4" colspan="2" scope="rowgroup"><b>Terrestrial planets</b></td>
                     <th border: solid; scope="row"> <b>Mercury</b></th>
                     <td>0.330</td>
                     <td>4,879</td>
