--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 
             th {
             background-color: rgb(235,235,235);
-            border-collapse: collapse;
-            border-style: solid;
-            border: solid
+            border-top-left-radius:0in;
 
             }
 
