--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
             th {
             background-color: rgb(235,235,235);
-            border-top-left-radius:0in;
+            border-left: solid;
+            border-right: solid;
 
             }
 
