--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <thead>
                      <tr>
                          <td colspan="2"></td>
-                         <th scope="col"> <b>Name</b></th> 
+                         <th border-top; scope="col"> <b>Name</b></th> 
                          <td scope="col"><b>Mass(10<sup>24</sup>kg)</b></td>
                          <td scope="col"><b>Diameter (km)</b></th>
                          <td scope="col"><b>Density (kg/m<sup>2</sup>)</b></td>
