--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
             }
 
+            title {
+            border-top: solid;
+            }
+
             td {
                 text-align: center;
             }
@@ -80,8 +84,8 @@
                 <thead>
                      <tr>
                          <td colspan="2"></td>
-                         <th scope="col"> <border-top><b>Name</b></border-top></th> 
-                         <td scope="col"><b>Mass(10<sup>24</sup>kg)</b></td>
+                         <title><th scope="col"><b>Name</b></th> </title>
+                         <td scope="col"><b>Mass    (10<sup>24</sup>kg)</b></td>
                          <td scope="col"><b>Diameter (km)</b></th>
                          <td scope="col"><b>Density (kg/m<sup>2</sup>)</b></td>
                          <td scope="col"><b>Gravity (m/s<sup>2</sup>)</b></th>
