--- a/index.html
+++ b/index.html
@@ -41,10 +41,6 @@
 
             }
 
-            title {
-            border-top: solid;
-            }
-
             td {
                 text-align: center;
             }
@@ -84,7 +80,7 @@
                 <thead>
                      <tr>
                          <td colspan="2"></td>
-                         <title><th scope="col"><b>Name</b></th> </title>
+                         <th>scope="col"><b>Name</b></th> 
                          <td scope="col"><b>Mass    (10<sup>24</sup>kg)</b></td>
                          <td scope="col"><b>Diameter (km)</b></th>
                          <td scope="col"><b>Density (kg/m<sup>2</sup>)</b></td>
