--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 
             }
 
+            th:nth-last-child(1) {
+
+            border-bottom: solid;
+            }
+
             td {
                 text-align: center;
             }
