--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
 
             }
 
-            th:nth-last-child(1) {
+           th:nth-last-of-type(1)
+           {
+               border-bottom: 1px solid;
+           }
 
-            border-bottom: solid;
-            }
 
             td {
                 text-align: center;
