--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             }
 
-           th:nth-last-of-type(1)
+           th:nth-last-child(1)
            {
                border-bottom: 1px solid;
            }
