--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" scope="rowgroup"><b>Dwarf Planets</b> </td>
-                    <th scope="row"> <b>Pluto</b> </th>
+                    <th class='border-bottom' scope="row"> <b>Pluto</b> </th>
                     <td>0.0146</td>
                     <td>2,370</td>
                     <td>2095</td>
