--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <thead>
                      <tr>
                          <td colspan="2"></td>
-                         <th scope="col"><b>Karla</b> </th> 
+                         <th scope="col"><b>Name</b> </th> 
                          <td scope="col"><b>Mass    (10<sup>24</sup>kg)</b></td>
                          <td scope="col"><b>Diameter (km)</b></th>
                          <td scope="col"><b>Density (kg/m<sup>2</sup>)</b></td>
@@ -216,6 +216,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" scope="rowgroup"><b>Dwarf Planets</b> </td>
+                    <th scope="row"> <b>Pluto</b> </th>
                     <td>0.0146</td>
                     <td>2,370</td>
                     <td>2095</td>
