--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ footer a:hover {
 <element class= "top"><body> 
     
     <header>
-        <h1>truffaut&nbsp;&nbsp;//&nbsp;&nbsp;portfolio</h1>
+        <h1>truffaut&nbsp;&nbsp; <span style="color:#8C2B3F">//</span>&nbsp;&nbsp;portfolio</h1>
     </header>  
         <nav>
             <img src="images/images/patricia-frost-125-edited-medium.jpg">
