--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@ footer a:hover {
             <img src="images/images/patricia-frost-125-edited-medium.jpg">
             <ul>
                 <li><a href="letter-markup">Letter Markup</a></li>
-                <li><a href="planets-table">Planets Table</a></li>
-                <li><a href="wanted-poster">Wanted Poster</a></li>
+                <li><a href="planets-table/planets-table/index.html">Planets Table</a></li>
+                <li><a href="wanted-poster/wanted-poster/index.html">Wanted Poster</a></li>
                 <li><a href="school-site">School Site</a></li>
                 <li><a href="blog">Blog</a></li>
             </ul>
