--- a/wanted-poster/wanted-poster/index.html
+++ b/wanted-poster/wanted-poster/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Anna Rodriguez">
-        <link rel="stylesheet" href="css/style.css">  
+        <link href="css/style.css">  
         
 <!-- Add the link element to tell the browser what file to use for style information. -->
         
