--- a/wanted-poster/wanted-poster/index.html
+++ b/wanted-poster/wanted-poster/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Anna Rodriguez">
-        <link href="css/style.css">  
+        <link href="/Users/annarodriguez/Documents/Github /allrodz93.github.io/wanted-poster/wanted-poster/css/style.css" rel="stylesheet" type="text/css">
         
 <!-- Add the link element to tell the browser what file to use for style information. -->
         
