--- a/wanted-poster/wanted-poster/index.html
+++ b/wanted-poster/wanted-poster/index.html
@@ -4,11 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Anna Rodriguez">
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-        
-<!-- Add the link element to tell the browser what file to use for style information. -->
-        
         <title>Wanted | Jame Markus</title>
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <main>
