--- a/wanted-poster/wanted-poster/index.html
+++ b/wanted-poster/wanted-poster/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Anna Rodriguez">
         <title>Wanted | Jame Markus</title>
-        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css"> >
     </head>
     <body>
         <main>
