--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ footer a:hover {
                 <li><a href="letter-markup">Letter Markup</a></li>
                 <li><a href="planets-table/planets-table/index.html">Planets Table</a></li>
                 <li><a href="wanted-poster/wanted-poster/index.html">Wanted Poster</a></li>
-                <li><a href="school-site">School Site</a></li>
+                <li><a href="school-site /school-site/index.html">School Site</a></li>
                 <li><a href="blog">Blog</a></li>
             </ul>
             <p>
