--- a/school-site/index.html
+++ b/school-site/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="school-site/css/style.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="John Durham">
+        <meta name="author" content="Anna Rodriguez">
         <title>Franzen Irony University</title>
-        
+        <link rel="stylesheet" href="style.css"
         <!-- Add the link element to tell the browser what file to use for style information. -->
     
     </head>
