--- a/school-site/index.html
+++ b/school-site/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Anna Rodriguez">
         <title>Franzen Irony University</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="school-site/css/style.css">
         <!-- Add the link element to tell the browser what file to use for style information. -->
     
     </head>
