--- a/school-site/index.html
+++ b/school-site/index.html
@@ -7,7 +7,167 @@
         <title>Franzen Irony University</title>
         <link rel="stylesheet" href="/Users/annarodriguez/Documents/Github /allrodz93.github.io/school-site/css/style.css">
         <!-- Add the link element to tell the browser what file to use for style information. -->
+    <style>
+        {
+    box-sizing: border-box;
+}
+
+html {
+    font-size:16px;
+}
+
+body {
+    margin: 1.5rem auto;
+    width:90%;
+    min-width:56.25rem;
+}
+
+/* Layout */
+
+main {
+    overflow:auto;
+    min-width:45rem;
     
+}
+
+section {
+    float: left;
+    min-width: 22.5rem;
+    width:50%;
+}
+
+figure {
+    width:60%;
+    margin:0 10% 0 0;
+    float:left;
+}
+
+figure img {
+    width:100%;
+    max-width:25rem;
+}
+
+figcaption {
+    margin:.375rem 0;
+}
+
+.long-list {
+    margin-top:0;
+}
+
+nav {
+    float: left;
+    width:11.25rem;
+}
+
+footer {
+    clear: both;
+    margin-top:1.5rem;
+}
+
+section, aside, nav, footer {
+  padding: .5rem;
+}
+
+/* header and footer */
+
+header, footer {
+  border-top: .125rem solid #33658A;
+  border-bottom: .125rem solid #33658A;
+}
+
+/* ------ START WRITING YOUR CODE BELOW THIS LINE ------ */
+
+
+
+/* NOTE: While you will be using some of the same CSS properties, the VALUES 
+   may need to be different in order to style the page correctly. */
+
+
+
+/* Imported Typfaces */
+@font-face {
+    font-family: Josefins;
+    src: url(school-site/fonts/josefinslab-regular.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: Montserrat;
+    src: url(school-site/fonts/montserrat-regular.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* Typography Styles */
+html {
+    font-family: Montserrat, Arial, sans-serif;
+}
+h1 {
+    font-family: Josefinslab, Arial, sans-serif
+    letter-spacing: .125rem;
+
+}
+h2 {
+    letter-spacing: .125rem;
+}
+h2 + p {
+    letter-spacing: .125rem;
+}
+p {
+
+}
+li {
+
+}
+figcaption {
+
+}
+
+
+/* Link Styling */
+
+a{
+
+}
+a:link,
+a:hover {
+
+}
+a:focus,
+a:hover {
+
+}
+
+
+/* List Styling */
+ul {
+
+}
+ol {
+
+}
+.long-list a:hover {
+
+}
+/* Navigation Menu */
+nav {
+
+}
+nav a {
+
+}
+nav a:focus,
+nav a:hover {
+
+}
+nav a:active {
+
+}
+/* Footer Styles */
+footer {}
+
+</style>
     </head>
     <body>
         <header>
