--- a/school-site/index.html
+++ b/school-site/index.html
@@ -6,7 +6,6 @@
         <meta name="author" content="Anna Rodriguez">
         <title>Franzen Irony University</title>
         <link rel="stylesheet" href="/Users/annarodriguez/Documents/Github /allrodz93.github.io/school-site/css/style.css">
-        <!-- Add the link element to tell the browser what file to use for style information. -->
     <style>
         {
     box-sizing: border-box;
@@ -104,7 +103,7 @@ html {
     font-family: Montserrat, Arial, sans-serif;
 }
 h1 {
-    font-family: Josefinslab, Arial, sans-serif
+    font-family: Josefinslab, Arial, sans-serif;
     letter-spacing: .125rem;
 
 }
