--- a/school-site/index.html
+++ b/school-site/index.html
@@ -109,6 +109,7 @@ h1 {
 }
 h2 {
     letter-spacing: .125rem;
+    font-family: Montserrat, Arial, sans-serif;
 }
 h2 + p {
     letter-spacing: .125rem;
