--- a/school-site/index.html
+++ b/school-site/index.html
@@ -100,16 +100,16 @@ header, footer {
 
 /* Typography Styles */
 html {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat;
 }
 h1 {
-    font-family: Josefinslab, Arial, sans-serif;
+    font-family: Josefinslab;
     letter-spacing: .125rem;
 
 }
 h2 {
     letter-spacing: .125rem;
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat;
 }
 h2 + p {
     letter-spacing: .125rem;
