--- a/school-site/index.html
+++ b/school-site/index.html
@@ -87,29 +87,30 @@ header, footer {
 /* Imported Typfaces */
 @font-face {
     font-family: Josefins;
-    src: url(school-site/fonts/josefinslab-regular.ttf) format('truetype');
+    src: url(school-site/fonts/josefinslab-regular.ttf) format ('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: Montserrat;
-    src: url(school-site/fonts/montserrat-regular.ttf) format('truetype');
+    src: url(school-site/fonts/montserrat-regular.ttf) format ('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 /* Typography Styles */
 html {
-    font-family: Montserrat;
+    font-family: Montserrat, Arial, sans-serif;
 }
 h1 {
-    font-family: Josefinslab;
+    font-family: Josefinslab, Arial, sans-serif;
     letter-spacing: .125rem;
+    text-align: center;
 
 }
 h2 {
     letter-spacing: .125rem;
-    font-family: Montserrat;
+    font-family: Montserrat, Arial, sans-serif;
 }
 h2 + p {
     letter-spacing: .125rem;
