--- a/school-site/index.html
+++ b/school-site/index.html
@@ -103,14 +103,14 @@ html {
     font-family: Montserrat, Arial, sans-serif;
 }
 h1 {
-    font-family: Josefinslab, Arial, sans-serif;
+    font-family: Josefinslab, Arial, Arial, Helvetica, sans-serif;
     letter-spacing: .125rem;
     text-align: center;
 
 }
 h2 {
     letter-spacing: .125rem;
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
 h2 + p {
     letter-spacing: .125rem;
