--- a/school-site/index.html
+++ b/school-site/index.html
@@ -100,17 +100,17 @@ header, footer {
 
 /* Typography Styles */
 html {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat, sans-serif;
 }
 h1 {
-    font-family: Josefinslab, Arial, Arial, Helvetica, sans-serif;
+    font-family: Josefinslab, sans-serif;
     letter-spacing: .125rem;
     text-align: center;
 
 }
 h2 {
     letter-spacing: .125rem;
-    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-family: Montserrat, sans-serif;
 }
 h2 + p {
     letter-spacing: .125rem;
