--- a/school-site/index.html
+++ b/school-site/index.html
@@ -106,11 +106,15 @@ h1 {
     font-family: Josefinslab;
     letter-spacing: .125rem;
     text-align: center;
+    font-size: 3.75rem;
+    margin: 1.125rem;
 
 }
 h2 {
     letter-spacing: .125rem;
     font-family: Montserrat;
+    font-size: 1.5rem;
+
 }
 h2 + p {
     letter-spacing: .125rem;
