--- a/school-site/index.html
+++ b/school-site/index.html
@@ -90,10 +90,9 @@ header, footer {
 
 /* Typography Styles */
 html {
-    font-family: Montserrat, Arial, sans-serif;
-}
+    font-family: Montserrat, sans-serif
 h1 {
-    font-family: Josefinslab, Arial, sans-serif;
+    font-family: Josefinslab, sans-serif;
     letter-spacing: .125rem;
     text-align: center;
     font-size: 3.75rem;
@@ -102,12 +101,12 @@ h1 {
 }
 h2 {
     letter-spacing: .125rem;
-    font-family: Josefinslab, Arial, sans-serif;
+    font-family: Josefinslab, sans-serif;
     font-size: 1.5rem;
 
 }
 h2 + p {
-    font-family: Josefinslab, Arial, sans-serif;
+    font-family: Josefinslab, sans-serif;
     text-indent: 1.5rem;
 }
 p {
@@ -119,6 +118,7 @@ li {
     font-size: .75rem;
     letter-spacing: .031rem;
     word-spacing: .125rem;
+    color:#33658A
 }
 figcaption {
     font-size: .75rem;
@@ -134,7 +134,7 @@ a:{
 a:link,
 a:visited, {
     outline: none;
-    color: #33658A;
+    color: #33658A
 }
 a:focus,
 a:hover {
@@ -164,6 +164,9 @@ ol {
 nav {
     padding: 0rem;
     margin-top: .25rem;
+}
+   
+nav a {
     text-decoration: none;
     width: 100;
     display: inline-block;
@@ -174,9 +177,6 @@ nav {
     border: solid;
     border-width: .063rem;
     border-color: #33658A;
-}
-nav a {
-
 }
 nav a:focus,
 nav a:hover {
