--- a/school-site/index.html
+++ b/school-site/index.html
@@ -119,6 +119,9 @@ li {
     letter-spacing: .031rem;
     word-spacing: .125rem;
 }
+li + a {
+    color:#33658A
+}
 figcaption {
     font-size: .75rem;
     margin-bottom: 2rem;
@@ -180,6 +183,7 @@ nav a {
     border: solid;
     border-width: .063rem;
     border-color: #33658A;
+    color:#33658A;
 }
 nav a:focus,
 nav a:hover {
