--- a/school-site/index.html
+++ b/school-site/index.html
@@ -134,12 +134,12 @@ a:{
     outline: none;
     color:#33658A
 }
-a:link,
+a:link {color:#33658A}
 a:visited, {
     outline: none;
     color:#33658A 
 }
-a:focus,
+a:focus {color:#33658A}
 a:hover {
     outline: none;
     text-decoration: none;
@@ -174,7 +174,6 @@ nav {
 }
    
 nav a {
-    text-decoration: none;
     width: 100;
     display: inline-block;
     line-height: 3;
