--- a/school-site/index.html
+++ b/school-site/index.html
@@ -164,6 +164,8 @@ ol {
 }
 .long-list a:hover {
     text-transform: uppercase;
+}
+.long-list {
     color:#33658A
 }
 /* Navigation Menu */
@@ -174,6 +176,7 @@ nav {
 }
    
 nav a {
+    text-decoration: none;
     width: 100;
     display: inline-block;
     line-height: 3;
