--- a/school-site/index.html
+++ b/school-site/index.html
@@ -178,7 +178,6 @@ nav {
 nav a {
     text-decoration: none;
     width: 100;
-    display: inline-block;
     line-height: 3;
     text-align:center;
     font-size: 1.125rem;
@@ -187,6 +186,7 @@ nav a {
     border-width: .063rem;
     border-color: #33658A;
     color:#33658A;
+    font-display: inline-block;
 }
 nav a:focus,
 nav a:hover {
