--- a/school-site/index.html
+++ b/school-site/index.html
@@ -184,7 +184,6 @@ nav a {
     border-width: .063rem;
     border-color: #33658A;
     color:#33658A;
-    font-display: inline-block;
 }
 nav a:focus,
 nav a:hover {
@@ -247,7 +246,7 @@ footer {
                         <a href="https://live.staticflickr.com/4353/35532378753_9a112d3ef6_c.jpg">!!!</a> by <a href="https://www.flickr.com/photos/shari-thompson/">Shari Thompson</a> licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/legalcode">BY-NC-SA 2.0</a>
                     </figcaption>
                 </figure>
-                <ul>
+                <ul class="long-list">
                     <li><a href="#">Listicle Tilde </a></li>
                     <li><a href="#">Locavore</a></li>
                     <li><a href="#">Vinyl Echo</a></li>
