--- a/school-site/index.html
+++ b/school-site/index.html
@@ -165,6 +165,9 @@ ol {
 .long-list a:hover {
     text-transform: uppercase;
 }
+.long-list a {
+    color: #33658A;
+}
 
 /* Navigation Menu */
 nav {
