--- a/school-site/index.html
+++ b/school-site/index.html
@@ -234,7 +234,7 @@ footer {
                     <li>Tilde poutine</li>
                 </ul>
                 <p>Occupy pour-over direct trade iPhone slow-carb squid wolf kombucha plaid:</p>
-                <ol>
+                <ol class="long-list">
                     <li><a href="#">On it migas</a> for more information</li>
                     <li><a href="#">Mixtape gochujang</a>, freegan intelligentsia flannel selfies</li>
                     <li><a href="#">Street art unicorn</a>!</li>
